fix bugs with animation on mobile resolution

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -65,11 +65,11 @@ body
     h1
         transition: .3s ease-in-out
         transform: translateY(-100%)
-        transform: matrix(1, 0, 0, 1, 0, -95) translateZ(0px)
+        transform: matrix(1, 0, 0, 1, 0, -120) translateZ(0px)
     p
         transition: .3s ease-in-out
         transform: translateY(-100%)
-        transform: matrix(1, 0, 0, 1, 0, -95) translateZ(0px)
+        transform: matrix(1, 0, 0, 1, 0, -120) translateZ(0px)
 .animate.active
     p
         position: relative
